[package]
name = "pdf_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.28", features = ["cmake-build", "tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
